--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: S. Intorruk
+logo: https://scontent.fbkk6-1.fna.fbcdn.net/v/t1.0-9/29791898_1616020518506181_8798620704950976512_n.jpg?_nc_cat=0&oh=8d9b430cdacffadea68e8128baa5acbb&oe=5BF47F13
+description: This's My Profile.
+show_downloads: false
+google_analytics:
 theme: jekyll-theme-minimal
